feat: 게임 화면의 데스크탑 레이아웃 개선 (최대 너비 및 중앙 정렬 추가)

--- a/src/styles/components/_ingame.scss
+++ b/src/styles/components/_ingame.scss
@@ -712,11 +712,12 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-
   @include m.mobile {
     gap: m.vw(10);
   }
   @include m.desktop {
+    max-width: 500px;
+    margin: 0 auto;
     gap: 10px;
   }
 }
