--- a/src/styles/components/_pages.scss
+++ b/src/styles/components/_pages.scss
@@ -505,6 +505,21 @@
   }
 }
 
+.room-lobby__notice {
+  font-family: "Mulmaru", sans-serif;
+  line-height: 1.45;
+  color: #9b7060;
+  text-align: left;
+  margin: 2px 0 0;
+
+  @include m.mobile {
+    font-size: m.vw(14);
+  }
+  @include m.desktop {
+    font-size: 14px;
+  }
+}
+
 .room-lobby__players {
   display: flex;
   flex-direction: column;
